# nermo_code

./: .gitignore  CMakeLists.txt  Kinematics.cpp  Kinematics.h  MouseCom.cpp  MouseCom.h  MouseCtrl.cpp  MouseCtrl.h  Mouse_Setup.cpp  Mouse_Setup.h  README.md  adafruit_init.py  adafruit_setup.py  adafruit_sub.py  main.cpp  package.xml
GaitCtrl/: GaitCtrl.cpp  GaitCtrl.h
NRPMouse/: Anatomy.h  NRPMouse.cpp  NRPMouse.h  Servo.cpp  Servo.h
NRPMouse/MouseHardware/: HwEdison.cpp  HwEdison.h  HwInterface.h
NRPMouse/MouseHardware/SparkFun_9DOF_Block_for_Edison_CPP_Library/: SparkFun_9DOF_Edison_Block_Example.cpp
NRPMouse/MouseHardware/SparkFun_ADC_Block_for_Edison_CPP_Library/: SparkFun_ADC_Edison_Block_Example.cpp
NRPMouse/MouseHardware/SparkFun_PWM_Block_for_Edison_CPP_Library/: SparkFun_pca9685_Edison.cpp
include/: cmouse_ctrl.h  kinematics.h
motions/AllMotions/: bound_0.txt  bound_1.txt  exciting_motion.txt  retargeting_0.txt  retargeting_1.txt  retargeting_2.txt  retargeting_stand_and_task1.txt  retargeting_stand_and_task2.txt  retargeting_task1.txt  retargeting_task2.txt  retargeting_walk2.txt  trott_0.txt
msg/: nrpmouse_msg.msg
src/: cmouse_ctrl.cpp  kinematics.cpp  main.cpp  nrpmouse_pub.cpp  nrpmouse_sub.cpp
